# tauri-plugin-dialog

./: CHANGELOG.md  Cargo.toml  DEPENDENTS.md  README.md  api-iife.js  build.rs  package.json
Source/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
dist-js/: index.cjs  index.d.ts  index.js
guest-js/: index.ts  init.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: error.rs  init-iife.js  lib.rs
