[build-dependencies]
tauri-plugin = { version = "2.0.4", features = ["build"] }

[dependencies]
log = { version = "0.4.25" }
serde = { version = "1.0.217" }
serde_json = { version = "1.0.138" }
tauri = { version = "2.2.5" }
tauri-plugin-fs = { version = "2.2.0" }
thiserror = { version = "2.0.11" }
url = { version = "2.5.4" }

[dev-dependencies]
tauri = { version = "2.2.5", features = ["wry"] }

[lib]
path = "Source/lib.rs"

[package]
authors = ["Tauri Programme within The Commons Conservancy"]
description = "Native system dialogs for opening and saving files along with message dialogs on your Tauri application."
edition = "2024"
license-file = "LICENSE"
links = "tauri-plugin-dialog-read-only"
name = "tauri-plugin-dialog-read-only"
repository = "https://github.com/tauri-apps/tauri"
rust-version = "1.85.0"
version = "2.2.0"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-linux-android"]

[package.metadata.platforms]

[package.metadata.platforms.support]
android = { level = "partial", notes = "Does not support folder picker" }
ios = { level = "partial", notes = "Does not support folder picker" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
windows = { level = "full", notes = "" }

[target]

[target.'cfg(any(target_os = "macos", windows, target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))']

[target.'cfg(any(target_os = "macos", windows, target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
raw-window-handle = "0.6"
rfd = { version = "0.15", default-features = false, features = [
  "tokio",
  "gtk3",
  "common-controls-v6",
] }

[target.'cfg(target_os = "ios")']

[target.'cfg(target_os = "ios")'.dependencies]
tauri = { version = "2.2.5", features = ["wry"] }
